--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
 </head>
 <body>
+<h1>versio 1</h1>
 <form id="vika-form">
   <label for="findingId">Finding ID:</label>
   <input type="text" name="findingId" id="findingId" />
   <input type="submit"></input>
+  <a href=“vikamobiilibeta://finding/588848”>test</a>
 </form>
+<p>Muutosloki:<br/>
+	- lisätty testi linkki
+</p>	
 <script type="text/javascript">
 function goToVikamobiili(e) {
   e.preventDefault();
