Lisätty staattinen linkki

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ document.getElementById("vika-form").addEventListener("submit",goToVikamobiili);
 </script>
 
 <a href="javascript:getUrl()">Ilmoitukseen</a>
+<a href="vikamobiilibeta://finding/123">Staattinen ilmoitukseen</a>
 
 </body>
 </html>
