--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+body {
+  font-size: 24px;
+}
+input {
+  font-size: 24px;
+}
+</style>
 </head>
 <body>
-<h1>Vikamobiili BETA Launcher 1.1</h1>
+<p>Vikamobiili BETA Launcher 1.3</p>
 <form id="vika-form">
   <label for="findingId">Vika ID:</label>
   <input type="text" name="findingId" id="findingId" onchange="updateLink()" onkeydown="updateLink()" onpaste="updateLink()" oninput="updateLink()"/>
@@ -20,6 +28,8 @@ function updateLink() {
 }
 
 </script>
+
+<br/>
 
 <a id="link" href="">Ilmoitukseen</a>
 
