--- a/findingbeta/index.html
+++ b/findingbeta/index.html
@@ -12,7 +12,7 @@ input {
 </style>
 </head>
 <body>
-<p>Vikamobiili BETA Launcher 1.3</p>
+<p>Vikamobiili BETA Launcher 1.3 - NEW</p>
 <form id="vika-form">
   <label for="findingId">Vika ID:</label>
   <input type="text" name="findingId" id="findingId" onchange="updateLink()" onkeydown="updateLink()" onpaste="updateLink()" oninput="updateLink()"/>
@@ -20,7 +20,7 @@ input {
 <script type="text/javascript">
 
 function updateLink() {
-  var linkA = "vikamobiilibeta://finding/" + document.getElementById("findingId").value;
+  var linkA = "vikamobiilifindingbeta://finding/" + document.getElementById("findingId").value;
   link.href = linkA;
 }
 
