--- a/index.html
+++ b/index.html
@@ -12,23 +12,6 @@ input {
 </style>
 </head>
 <body>
-<p>Vikamobiili BETA Launcher 1.3</p>
-<form id="vika-form">
-  <label for="findingId">Vika ID:</label>
-  <input type="text" name="findingId" id="findingId" onchange="updateLink()" onkeydown="updateLink()" onpaste="updateLink()" oninput="updateLink()"/>
-</form>
-<script type="text/javascript">
-
-function updateLink() {
-  var linkA = "vikamobiilibeta://finding/" + document.getElementById("findingId").value;
-  link.href = linkA;
-}
-
-</script>
-
-<br/>
-
-<a id="link" href="">Ilmoitukseen</a>
-
+<p>Outdated</p>
 </body>
 </html>
